...
      name="researcher-projects" 
      options={{ title: 'Meus Projetos' }} 
      />

      <Stack.Screen 
      name="edit-profile" 
      options={{ title: 'Meu Perfil' }} 
      />

      <Stack.Screen 
      name="edit-project" 
      options={{ title: 'Editar Projeto' }} 
      />
...
