...
            )}


            {!isGuest && (
              <>
                <ProfileActionCard
                  title="Meus Projetos"
                  description="Gerencie seus projetos existentes"
                  onPress={() => router.push("/edit-project")}
                />

                <ProfileActionCard
                  title="Meu Perfil"
...
              </>
            )}

            {/* Botão de logout no final */}
            {!isGuest && (
              <TouchableOpacity onPress={handleLogout} style={styles.logoutButton}>
                <Text style={styles.logoutText}>Sair da minha conta</Text>
              </TouchableOpacity>
            )}
          </>
        )}
      </ViewContainer>
    </View>
...
